LIMA-361: Fixed top ads horizontal alignment

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -12670,8 +12670,8 @@ span.sprite-icons.webmaster-border {
   max-width: 100%;
 }
 .visual-block > * {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
 .visual-bg {
   background-repeat: no-repeat;
@@ -12692,7 +12692,7 @@ span.sprite-icons.webmaster-border {
 }
 .visual-top > * {
   display: block;
-  margin: 0 auto;
+  margin: 0 auto !important;
 }
 .visual-top-bg {
   background-color: #ebebeb;
