--- a/src/css/less/livescore/rules/ls-ads.less
+++ b/src/css/less/livescore/rules/ls-ads.less
@@ -21,8 +21,8 @@
   }
 
   > * {
-  	margin-left: auto;
-  	margin-right: auto;
+  	margin-left: auto !important;
+  	margin-right: auto !important;
   }
 }
 
@@ -52,7 +52,7 @@
 
 	> * {
 		display: block;
-		margin: 0 auto;
+		margin: 0 auto !important;
 	}
 
 	&-bg {
